--- a/leapcfg/project_config.yaml
+++ b/leapcfg/project_config.yaml
@@ -6,6 +6,9 @@ CACHE_IMAGES: false
 RECT: false
 WORKERS: 0
 QUAD: false
+MAX_INSTANCE: 20
+HYP: 'data/hyp.scratch.custom.yaml'
+DATA: 'data/coco14.yaml'
 #create_dataloader(CONFIG['train_path'], CONFIG['imgsz'], CONFIG['batch_size'], CONFIG['gs'],
 #                                            Namespace(single_cls=CONFIG['single_cls']),
 #                                            hyp=hyp, augment=True, cache=CONFIG['cache_images'], rect=CONFIG['rect'],
